second test to hyperlink

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						
 						<p>I hold a master in Applied Economics from the University of Massachusetts Boston and a Bachelor in Economics from Universidad Thomas More in Nicaragua, my home country. </p>
 						
-						<p>Previously, I worked at FUNIDES, a Nicaraguan think tank, and at UMB where I worked on labor markets, impact evaluation, education, and social protection. </p>
+						<p>Previously, I worked at <a href="http://www.funides.com">FUNIDES</a>, a Nicaraguan think tank, and at UMB where I worked on labor markets, impact evaluation, education, and social protection. </p>
 						<ul class="actions">
 							<li><a href="docs/CV_Magaly_Saenz.pdf" class="button">A detailed CV is here</a></li>
 						</ul>
