--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<h1>Magaly Sáenz Somarriba</h1>
 							<h3>Aspiring Economist</h3> <br />
 						</header>
-						<p>I am a Research Assistant at the World Bank. Currently, I work on public finances, researching how reforms regarding withholding instruments and third party reporting impact tax compliance and revenue. I mostly work with firm-level administrative data. </p>
+						<p>I am a Research Assistant at the World Bank. Currently, I work on public economics, researching how reforms regarding withholding instruments and third party reporting impact tax compliance and revenue. I mostly work with firm-level administrative data. </p>
 						
 						<p>I am interested in development economics, especially with it's intersection with public economics, labor markets, gender and rural development. </p>
 						
