--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 			</header>
 
 		<!-- Main -->
-			<!--<div id="main">-->
+			<div id="main">
 
 				<!-- One -->
-					<!--<section id="one">-->
-						<!--<header class="major">-->
-							<!--<h1>Magaly Sáenz Somarriba</h1>-->
-							<!--<h3>Aspiring Economist</h3> <br />-->
+					<section id="one">
+						<header class="major">
+							<h1>Magaly Sáenz Somarriba</h1>
+							<h3>Aspiring Economist</h3> <br />
 						</header>
 						<p>I am a Research Assistant at the World Bank. Currently, I work on public economics, researching how reforms regarding withholding instruments and third party reporting impact tax compliance and revenue. I mostly work with firm-level administrative data. </p>
 						
