--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 					<section id="one">
 						<header class="major">
 							<h1>Magaly Sáenz Somarriba</h1>
-							<h3>Aspiring Economist</h3> <br />
+							<h3>Econ Phd Student Economist</h3> <br />
 						</header>
-						<p>I am a Research Assistant at the World Bank. Currently, I work on public economics, researching how reforms regarding withholding instruments and third party reporting impact tax compliance and revenue. I mostly work with firm-level administrative data. </p>
+						<p>I am a first year Econ PhD Student at the University of Delaware. </p>
 						
 						<p>I am interested in development economics, especially with it's intersections with public economics, labor markets, gender and rural development. </p>
 						
